--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -12,16 +12,18 @@
 }
 
 .card {
+    min-width: 300px;
+    max-width: 500px;
     height: 188px;
     background: rgb(235, 241, 241);
     border-radius: 5px;
-    -webkit-box-shadow: 5px 7px 17px 6px #b1aeae;
-    box-shadow: 5px 7px 17px 6px #b1aeae;
 }
 
 .titleC {
+    margin-bottom: 0.6rem;
     font-size: 1.5rem;
     width: 100%;
+    font-weight: 700;
     text-align-last: center;
     padding: 3%;
 }
@@ -37,18 +39,18 @@
 }
 
 .track {
+    margin: 7px;
     width: 100%;
     display: flex;
 }
 
 .card label {
-    min-width: 300px;
-    max-width: 500px;
     margin: 5%;
     font-weight: 700;
     padding: 2%;
     font-size: 1rem;
     color: #211f1f;
+    opacity: 0.7;
 }
 
 .contentcc {
